Fixed alignment vertically in photo page use column in flex dir

--- a/styles/images.css
+++ b/styles/images.css
@@ -1,10 +1,10 @@
 .slideshow {
   display: flex;
   justify-content: center;
-  position: absolute;
-  top: 51px;
+  
 }
 
 .primary_img {
    width: 50%;
+   margin: 0;
 }
